<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mortal</string>

    <string name="loading">正在加载&#8230;</string>
    <string name="completed">加载完成</string>
    <string name="no_more">没有更多</string>
    <string name="failure">加载失败</string>
    <string name="network_error">网络连接失败，请检查网络！</string>
    <string name="reload">重新加载</string>

    <string name="home">首页</string>
    <string name="hot">热门</string>
    <string name="recommend">精选</string>
    <string name="me">我</string>

    <string name="user_info">用户详情</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="email">邮箱</string>
    <string name="none">无</string>

    <string name="format_author">作者：%1$s</string>

    <string name="format_date_recent">刚刚</string>
    <string name="format_date_minute_ago">%1$d分钟前</string>
    <string name="format_date_hour_ago">%1$d小时前</string>
    <string name="format_date_day_ago">%1$d天前</string>
    <string name="format_date_month_ago">%1$d个月前</string>

    <string name="account">账号</string>
    <string name="account_verify_hint">帐号必须是3&#8211;16位的数字、字母、下划线组合</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="re_password">确认密码</string>
    <string name="password_verify_hint">密码必须是6&#8211;16位的数字、字母组合</string>
    <string name="account_empty">请输入账号</string>
    <string name="password_empty">请输入密码</string>
    <string name="login">登录</string>
    <string name="logging">登录中&#8230;</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>

    <string name="format_skip">跳过%1$d</string>

    <string name="search">搜索</string>

    <string name="edit">编辑</string>
    <string name="please_input">请输入&#8230;</string>

    <string name="format_index_normal">%1$d/%2$d</string>
    <string name="save">保存</string>
    <string name="saving">正在保存&#8230;</string>
    <string name="format_download_success">保存到：%1$s</string>
    <string name="format_download_failure">下载失败：%1$s</string>

    <string name="login_or_register">登录/注册</string>
    <string name="view_history">浏览记录</string>
    <string name="message_center">消息中心</string>
    <string name="category_manager">标签管理</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_success">意见反馈成功</string>
    <string name="setting">设置</string>

    <string name="clear_cache">清除缓存</string>
    <string name="version_and_check">版本与检测</string>
    <string name="about">关于</string>
    <string name="privacy_and_policy">隐私政策</string>
    <string name="user_agreement">用户协议</string>
    <string name="project_home_page">项目首页</string>

    <string name="edit_nickname">编辑昵称</string>
    <string name="nickname_helper_text">好名字可以让你的朋友更容易记住你</string>
    <string name="edit_email">编辑邮箱</string>
    <string name="email_verify_hint">请输入正确的邮箱地址</string>
    <string name="done">确认</string>
    <string name="cancel">取消</string>

    <string name="no_new_version">您安装的已经是最新版本了</string>
    <string name="discover_new_version">发现新版本</string>
    <string name="upgrade_now">立即更新</string>
    <string name="upgrade_later">稍后更新</string>
    <string name="ignore_this_version">忽略</string>
    <string name="version_upgrade">版本更新</string>
    <string name="download_ing">正在下载&#8230;</string>
    <string name="download_completed">下载完成</string>

    <string name="account_and_safety">帐号与安全</string>
    <string name="reset_password">重置密码</string>
    <string name="reset_password_success">重置密码成功</string>
    <string name="account_cancellation">帐号注销</string>
    <string name="account_cancellation_confirm">确定注销当前帐号吗？</string>
    <string name="account_cancellation_success">帐号注销成功</string>

    <string name="log_out">退出登录</string>
    <string name="log_out_confirm">确定退出当前登录帐号吗？</string>
</resources>
