<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_top"
        style="@style/BaseToolbar"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/reset_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:hint="@string/password"
        app:boxBackgroundColor="@color/window_content"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:boxStrokeWidth="@dimen/dp_0"
        app:boxStrokeWidthFocused="@dimen/dp_0"
        app:helperText="@string/password_verify_hint"
        app:endIconDrawable="@drawable/selector_password_toggle"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/text_content"
            android:textSize="@dimen/sp_14" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:hint="@string/new_password"
        app:boxBackgroundColor="@color/window_content"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:boxStrokeWidth="@dimen/dp_0"
        app:boxStrokeWidthFocused="@dimen/dp_0"
        app:helperText="@string/password_verify_hint"
        app:endIconDrawable="@drawable/selector_password_toggle"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/text_content"
            android:textSize="@dimen/sp_14" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
