<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_top"
        style="@style/BaseToolbar"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/user_info" />

    <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/ripple_btn_white"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56">

        <TextView
            android:text="@string/avatar"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/text_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_nickname"
        android:orientation="horizontal"
        android:background="@drawable/ripple_btn_white"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/px_1"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48">

        <TextView
            android:text="@string/nickname"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/text_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_nickname"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/ripple_btn_white"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:paddingTop="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_8"
        android:layout_marginTop="@dimen/px_1"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48">

        <TextView
            android:text="@string/email"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/text_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_email"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
