<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
	android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btn_close"
        style="@style/BaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:src="@drawable/ic_close"
        android:tint="@color/app_theme"
        app:backgroundTint="@color/window_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        style="@style/BaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_16"
        android:paddingTop="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_8"
        android:text="@string/register"
        android:textColor="@color/text_title"
        android:textSize="@dimen/sp_15"
        app:backgroundTint="@color/window_content"
        app:layout_constraintBottom_toBottomOf="@id/btn_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/divider_normal" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_96"
        android:text="@string/app_name"
        android:textColor="@color/text_title_sub"
        android:textSize="@dimen/sp_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_16"
        app:boxBackgroundColor="@color/transparent"
        app:counterMaxLength="15"
        app:errorIconTint="@color/app_warn"
        app:errorTextColor="@color/text_warn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account"
            android:maxLength="15"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_content"
            android:textSize="@dimen/sp_14" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        app:boxBackgroundColor="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_account"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/app_theme"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/text_content"
            android:textSize="@dimen/sp_14" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/BaseButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_margin="@dimen/dp_16"
        android:text="@string/login"
        android:textColor="@color/text_white"
        android:textSize="@dimen/sp_15"
        app:cornerRadius="@dimen/dp_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:strokeColor="@color/window_content"
        app:strokeWidth="@dimen/dp_1" />
</androidx.constraintlayout.widget.ConstraintLayout>